--- a/examples/boulderdash/index.html
+++ b/examples/boulderdash/index.html
@@ -3,13 +3,12 @@
           "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>caml</title>
+    <title>BoulderDash</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body id="body">
   </body>
    <script type="text/javascript" src="mlString.js"></script>
    <script type="text/javascript" src="runtime.js"></script>
-   <script type="text/javascript" src="obrowser.js"></script>
    <script type="text/javascript" src="boulderdash.js"></script>
 </html>
