--- a/examples/cubes/index.html
+++ b/examples/cubes/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
   </body>
-  <script type="text/javascript" src="mlString.js"></script>
-  <script type="text/javascript" src="md5.js"></script>
-  <script type="text/javascript" src="runtime.js"></script>
+  <script type="text/javascript" src="../../runtime/mlString.js"></script>
+  <script type="text/javascript" src="../../runtime/md5.js"></script>
+  <script type="text/javascript" src="../../runtime/runtime.js"></script>
   <script type="text/javascript" src="cubes.js"></script>
 </html>
