--- a/examples/minesweeper/index.html
+++ b/examples/minesweeper/index.html
@@ -3,9 +3,8 @@
 	  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Hello world</title>
+    <title>Minesweeper</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="runtime.js"></script>
     <script type="text/javascript" src="minesweeper.js"></script>
   </head>
   <body>
