Fixed code generation bug
Ignore-this: f3af0e10420a52ef56bd9385dc516c61

darcs-hash:20100612223931-41a61-b3db0f449399b2b5c0e1ff3322b04ddd1c465b9d

--- a/examples/wiki/index.html
+++ b/examples/wiki/index.html
@@ -3,7 +3,7 @@
 	  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>caml</title>
+    <title>Realtime wiki syntax parsing</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="wiki.js"></script>
   </head>
