Planet example: control buttons
Ignore-this: 481705ee1835428d3baf285baa25db9e

darcs-hash:20100625134145-c8b6b-a1f23029d8ba8f684b6cccf2072351d0a701a795

--- a/examples/tessel/index.html
+++ b/examples/tessel/index.html
@@ -9,6 +9,9 @@
 /*
 */
 body {background-color: #000000;}
+canvas {float:left;}
+.controls {float:left; padding:8px;}
+.controls div {background-color: #ffffff;margin:8px; padding:8px; }
 -->
 </style>
   <script type="text/javascript" src="tessel.js"></script>
