--- a/examples/tessel/index.html
+++ b/examples/tessel/index.html
@@ -8,10 +8,11 @@
 <!--
 /*
 */
-body {background-color: #000000;}
+body {background-color:black; color:white}
 canvas {float:left;}
-.controls {float:left; padding:8px;}
-.controls div {background-color: #ffffff;margin:8px; padding:8px; }
+.controls {float:left; padding:8px; color:black}
+.controls div {background-color:white;margin:8px; padding:8px; }
+p {clear:left;}
 -->
 </style>
   <script type="text/javascript" src="tessel.js"></script>
