--- a/examples/boulderdash/index.html
+++ b/examples/boulderdash/index.html
@@ -7,6 +7,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="boulderdash.js"></script>
   </head>
-  <body id="body">
+  <body id="boulderdash">
   </body>
 </html>
