--- a/examples/wiki/index.html
+++ b/examples/wiki/index.html
@@ -7,6 +7,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="wiki.js"></script>
   </head>
-  <body>
+  <body id="wiki_demo">
   </body>
 </html>
