Renamed tessel example into planet (removed old planet example)
Ignore-this: f61604e5132f73466c12ed6ed6ae9569

darcs-hash:20100630114548-c8b6b-7a1ebc78b9176dfaaaf2d95a73f7a7dfd48072cc

--- a/examples/planet/index.html
+++ b/examples/planet/index.html
@@ -4,7 +4,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Planet</title>
-    <script type="text/javascript" src="planet.js"></script>
+<style type="text/css">
+<!--
+body {background-color:black; color:white}
+canvas {float:left;}
+.controls {float:left; padding:8px; color:black}
+.controls div {background-color:white;margin:8px; padding:8px; }
+p {clear:left;}
+-->
+</style>
+  <script type="text/javascript" src="planet.js"></script>
   </head>
   <body>
   </body>
