Improved the OCaml toplevel
Ignore-this: e19d41771cd7ea3f33384e803c800353

darcs-hash:20110401223554-c8b6b-0320363e43cf4ad6028b1869a349278647a3aa2e

--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -7,6 +7,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="toplevel.js"></script>
   </head>
-  <body id="output">
+  <body id="toplevel">
   </body>
 </html>
