Examples: updated main index.html file
Ignore-this: 5d4fce05a874616f5e3c62e69f1c3b08

darcs-hash:20110713084607-c8b6b-746eb09a34871f776df57e0fcaa1f07fe457ed53

--- a/examples/index.html
+++ b/examples/index.html
@@ -26,7 +26,8 @@ ul {
 <ul>
 <li>
 <a href="planet/index.html">Rotating planet</a>
-(or a <a href="tessel/index.html">larger variant</a>)
+<li>
+<a href="graph_viewer/index.html">Graph viewer</a>
 <li>
 <a href="boulderdash/index.html">Boulder Dash game</a>
 <li>
