Example: WebGL demo
Ignore-this: 3c0d17c083b53a2008e6718ee04e4d8f

darcs-hash:20120307184828-0cb73-c6fb407b19c00df9d8e57e7acf3018fd588474df

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,6 +36,8 @@ ul {
 <a href="wiki/index.html">Real-time wiki editor</a>
 <li>
 <a href="cubes/index.html">A random walk on lozenge tiling configurations</a>
+<li>
+<a href="webgl/index.html">A simple webGL demo</a>
 </ul>
 <img class="gauche" alt="Ocsigen" src="ocsigen8-100x30.png">
 </body>
