Example: clean a few things, display fps
Ignore-this: cf534565ae0fef2ccaaeed6e5e4d00b0

darcs-hash:20120308131100-0cb73-2f3a935cbdc1de8089318a07140fdc5d207c07ae

--- a/examples/webgl/index.html
+++ b/examples/webgl/index.html
@@ -3,10 +3,10 @@
           "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>WebGL teapot</title>
+    <title>WebGL monkey</title>
 <style type="text/css">
 <!--
-body {background-color:black}
+body {background-color:black; color:white}
 canvas {float:left;}
 -->
 </style>
@@ -45,6 +45,7 @@ canvas {float:left;}
   <script type="text/javascript" src="webgl.js"></script>
   </head>
   <body>
-    <canvas id="canvas" height="400" width="400" />
+    <canvas id="canvas" height="400" width="400"></canvas>
+    <div><span id="fps"></span> frames per second</div>
   </body>
 </html>
