--- a/examples/hyperbolic/index.html
+++ b/examples/hyperbolic/index.html
@@ -77,7 +77,7 @@
           nodeBackgroundColor: "#794c0d", nodeColor: "#171b37",
           buttonColor: "white" };
     </script>
-    <script type="text/javascript" src="hypertree.js"></script>
+    <script type="text/javascript" src="all.js"></script>
   </head>
   <body>
   </body>
