--- a/examples/index.html
+++ b/examples/index.html
@@ -33,7 +33,11 @@ ul {
 <li>
 <a href="minesweeper/index.html">Minesweeper game</a>
 <li>
+<a href="hyperbolic/index.html">Hyperbolic graph</a>
+<li>
 <a href="wiki/index.html">Real-time wiki editor</a>
+<li>
+<a href="wysiwyg/index.html">Wysiwyg editor</a>
 <li>
 <a href="cubes/index.html">A random walk on lozenge tiling configurations</a>
 <li>
