--- a/examples/boulderdash/index.html
+++ b/examples/boulderdash/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Boulder Dash</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="boulderdash.js"></script>
+    <script type="text/javascript" src="all.js"></script>
   </head>
   <body id="boulderdash">
   </body>
