--- a/examples/webgl/index.html
+++ b/examples/webgl/index.html
@@ -42,7 +42,7 @@ canvas {float:left;}
     gl_FragColor = vec4( col * lighting + u_ambientLight, 1);
   }
 </script>
-  <script type="text/javascript" src="webgldemo.js"></script>
+  <script type="text/javascript" src="all.js"></script>
   </head>
   <body>
     <canvas id="canvas" height="400" width="400"></canvas>
