--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>OCaml toplevel</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="toplevel.js"></script>
+    <script type="text/javascript" src="../_build/toplevel/toplevel_expunge.js"></script>
   </head>
   <body id="toplevel">
   </body>
