Toplevel: add history

--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -122,6 +122,10 @@
             <td>Newline</td>
           </tr>
           <tr>
+            <td>Up / Down</td>
+            <td>Browse history</td>
+          </tr>
+          <tr>
             <td>Ctrl + l</td>
             <td>Clear display</td>
           </tr>
