--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -105,9 +105,9 @@
     <div id="toplevel-side">
       <h3>Js_of_ocaml</h3>
       <h4>A compiler from OCaml bytecode to Javascript.</h4>
-      <p>It allow to write OCaml programs that run on Web browsers.  It is
+      <p>It makes OCaml programs that run on Web browsers. It is
         easy to install as it works with an existing installation of OCaml,
-        with no need to recompile any library.  It comes with bindings for a
+        with no need to recompile any library. It comes with bindings for a
         large part of the browser APIs.</p>
       <p>This web-based OCaml toplevel is compiled using Js_of_ocaml.</p>
       <h4>Command</h4>
