--- a/index.html
+++ b/index.html
@@ -86,7 +86,16 @@
 
       }
     </style>
-    <script type="text/javascript" src="toplevel.js"></script>
+    <script type="text/javascript">
+      var default_top = "v/toplevel-4.01.0.js";
+      window.onhashchange = function() { window.location.reload() }
+      var version = window.location.hash.match(/#?(.*)/);
+      var url = (version[1]=="")?default_top:("v/toplevel-"+version[1]+".js");
+      var fileref=document.createElement('script');
+      fileref.setAttribute("type","text/javascript");
+      fileref.setAttribute("src", url);
+      document.getElementsByTagName("head")[0].appendChild(fileref);
+    </script>
   </head>
   <body>
     <div id="toplevel-container">
@@ -105,9 +114,9 @@
     <div id="toplevel-side">
       <h3>Js_of_ocaml</h3>
       <h4>A compiler from OCaml bytecode to Javascript.</h4>
-      <p>It allow to write OCaml programs that run on Web browsers.  It is
+      <p>It makes OCaml programs that run on Web browsers. It is
         easy to install as it works with an existing installation of OCaml,
-        with no need to recompile any library.  It comes with bindings for a
+        with no need to recompile any library. It comes with bindings for a
         large part of the browser APIs.</p>
       <p>This web-based OCaml toplevel is compiled using Js_of_ocaml.</p>
       <h4>Command</h4>
