Toplevel: color toplevel phrases

--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -66,6 +66,9 @@
       font-size: 12px;
       font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
       }
+      .caml{
+      color:rgb(110, 110, 201);
+      }
       #toplevel-side{
       width:45%;
       height: 100%;
