Toplevel: more examples

--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -97,6 +97,9 @@
       width: 270px;
       float: left;
       }
+      #toplevel-examples .list-group-item{
+      padding: 5px 15px;
+      }
       .clear { clear:both; }
     </style>
     <script type="text/javascript">
@@ -164,7 +167,7 @@
       </table>
       <h4>Try to execute samples</h4>
       <div id="toplevel-examples" class="list-group"></div>
-      <canvas width=200 height=150 id="test-canvas"></canvas>
+      <canvas width=200 height=200 id="test-canvas"></canvas>
       <h4 class="clear">See the generated javascript code</h4>
       <pre id="last-js">
       </pre>
