Graphics: fix offset & scroll issue

--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -70,6 +70,7 @@
       color:rgb(110, 110, 201);
       }
       #toplevel-side{
+      position:relative;
       width:45%;
       height: 100%;
       overflow: auto;
