--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       .clear { clear:both; }
     </style>
     <script type="text/javascript">
-      var default_top = "toplevel.js";
+      var default_top = "v/toplevel-4.01.0.js";
       window.onhashchange = function() { window.location.reload() }
       var version = window.location.hash.match(/#?(.*)/);
       var url = (version[1]=="")?default_top:("v/toplevel-"+version[1]+".js");
