--- a/examples/index.html
+++ b/examples/index.html
@@ -38,6 +38,11 @@ ul {
 <a href="cubes/index.html">A random walk on lozenge tiling configurations</a>
 <li>
 <a href="webgl/index.html">A simple webGL demo</a>
+<li>
+<a href="wysiwyg/index.html">WYSIWYG</a>
+<li>
+<a href="hyperbolic/index.html">Hyperbolic tree viewer</a>
+
 </ul>
 <img class="gauche" alt="Ocsigen" src="ocsigen8-100x30.png">
 </body>
