--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -103,6 +103,7 @@
       }
       .clear { clear:both; }
     </style>
+    <script type="text/javascript" src="toplevel-fs.js"></script>
     <script type="text/javascript">
       var default_top = "toplevel.js";
       window.onhashchange = function() { window.location.reload() }
