--- a/examples/hyperbolic/index.html
+++ b/examples/hyperbolic/index.html
@@ -79,6 +79,6 @@
     </script>
   </head>
   <body>
-    <script type="text/javascript" src="hypertree.js"></script>
+    <script type="text/javascript" src="all.js"></script>
   </body>
 </html>
