Toplevel: include reactiveData

--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -94,6 +94,13 @@
       float: left;
       margin: 7px;
       }
+      #output canvas {
+      background-color: #464646;
+      float: none;
+      display: block;
+      border: 1px dashed while;
+      margin: 7px;
+      }
       #toplevel-examples {
       width: 270px;
       float: left;
