--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -101,6 +101,9 @@
       border: 1px dashed while;
       margin: 7px;
       }
+      #output img {
+      display:block;
+      }
       #toplevel-examples {
       width: 270px;
       float: left;
