--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
       float: left;
       margin: 7px;
       }
+      #output canvas {
+      background-color: #464646;
+      float: none;
+      display: block;
+      border: 1px dashed while;
+      margin: 7px;
+      }
+      #output img {
+      display:block;
+      }
       #toplevel-examples {
       width: 270px;
       float: left;
@@ -103,6 +113,7 @@
       }
       .clear { clear:both; }
     </style>
+    <script type="text/javascript" src="toplevel-fs.js"></script>
     <script type="text/javascript">
       var default_top = "v/toplevel-4.01.0.js";
       window.onhashchange = function() { window.location.reload() }
