--- a/editor/index.html
+++ b/editor/index.html
@@ -14,6 +14,9 @@
       display: inline-block;
       margin: 0px;
       }
+      .line span {
+      background-color: darkcyan;
+      }
       .line {
       background-color: rgb(218, 218, 218);
       }
