--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       for(var f in fields){
         var data = fields[f].split(/=/);
         if(data[0] == "version"){
-          version = data[1];
+          version = data[1].replace(/%2B/,"+");
           break;
         }
       }
