--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <head>
     <title>OCaml toplevel</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <style>
 
       code, kbd, pre, samp {
@@ -92,6 +93,11 @@
       .stdout {
 
       }
+      .errorloc{
+      border-bottom-width: 3px;
+      border-bottom-style: solid;
+      border-bottom-color: red;
+      }
       canvas {
       border: 1px dashed black;
       float: left;
@@ -146,7 +152,7 @@
       var hash = window.location.hash.replace(/^#/,"");
       var fields = hash.split(/&/);
       var prefix = "v/";
-      var version = "4.02.0";
+      var version = "4.03.0";
       for(var f in fields){
         var data = fields[f].split(/=/);
         if(data[0] == "version"){
@@ -169,21 +175,24 @@
       load_script("lwt.cmis.js");
       load_script("react.cmis.js");
       load_script("reactiveData.cmis.js");
+      load_script("dynlink.cmis.js");
+      load_script("bigarray.cmis.js");
+      load_script("js_of_ocaml.async.cmis.js");
+      load_script("core_kernel.cmis.js");
+      load_script("async_kernel.cmis.js");
       load_script("toplevel.js");
+      load_script("strftime.js");
     </script>
   </head>
   <body>
     <div id="toplevel-container">
+      <a href="http://ocsigen.org/js_of_ocaml" >
+	<img src="http://ocsigen.org/resources/logos/text_js_of_ocaml_with_shadow.png" alt="js_of_ocaml" />
+      </a>
       <pre id="output"></pre>
       <div>
         <div id="sharp" class="sharp"></div>
-        <textarea id="userinput"></textarea>
-        <!-- <button type="button" class="btn btn-default" -->
-        <!--         id="btn-execute">Execute</button> -->
-        <!-- <button type="button" class="btn btn-default" -->
-        <!--         id="btn-clear">Clear</button> -->
-        <!-- <button type="button" class="btn btn-default" -->
-        <!--         id="btn-reset">Reset</button> -->
+        <textarea id="userinput">Loading ...</textarea>
         <button type="button" class="btn btn-default"
                 id="btn-share">Share</button>
       </div>
