--- a/toplevel/examples/index.html
+++ b/toplevel/examples/index.html
@@ -169,7 +169,7 @@
       load_script("exported-unit.cmis.js");
       load_script("stdlib.cmis.js");
       load_script("js_of_ocaml.cmis.js");
-      load_script("js_of_ocaml.toplevel.cmis.js");
+      load_script("js_of_ocaml-toplevel.cmis.js");
       load_script("js_of_ocaml.deriving.cmis.js");
       load_script("js_of_ocaml.tyxml.cmis.js");
       load_script("js_of_ocaml.graphics.cmis.js");
