add some cmis for 4.05

--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
       }
       load_script("exported-unit.cmis.js");
       load_script("stdlib.cmis.js");
+      load_script("base.cmis.js");
+      load_script("base.md5.cmis.js");
+      load_script("base.caml.cmis.js");
+      load_script("base.shadow_stdlib.cmis.js");
+      load_script("sexplib.cmis.js");
+      load_script("stdio.cmis.js");
       load_script("js_of_ocaml.cmis.js");
       load_script("js_of_ocaml-lwt.cmis.js");
       load_script("js_of_ocaml-ppx.as-lib.cmis.js");
@@ -180,7 +186,6 @@
       load_script("reactiveData.cmis.js");
       load_script("dynlink.cmis.js");
       load_script("bigarray.cmis.js");
-      load_script("base.cmis.js");
       load_script("core_kernel.cmis.js");
       load_script("async_kernel.cmis.js");
       load_script("async_js.cmis.js");
