Misc: tune toplevel

--- a/toplevel/examples/lwt_toplevel_bin/index.html
+++ b/toplevel/examples/lwt_toplevel_bin/index.html
@@ -181,6 +181,12 @@
       load_script("dynlink.cmis.js");
       load_script("bigarray.cmis.js");
       load_script("toplevel.js");
+      load_script("base.cmis.js");
+      load_script("core_kernel.cmis.js");
+      load_script("async_kernel.cmis.js");
+      load_script("async_js.cmis.js");
+      load_script("toplevel.js");
+
     </script>
   </head>
   <body>
