Misc: more cleanup

--- a/toplevel/eval/index.html
+++ b/toplevel/eval/index.html
@@ -17,7 +17,7 @@
     </script>
     <div id="script1"> </div>
 
-    <script type="text/javascript" src="../../_build/default/toplevel/eval/eval.js"></script>
+    <script type="text/javascript" src="eval.js"></script>
 
   </body>
 </html>
