Lib: Fix encoding in Sys.set_channel_flusher, fix #686

--- a/toplevel/eval/index.html
+++ b/toplevel/eval/index.html
@@ -17,6 +17,11 @@
     </script>
     <div id="script1"> </div>
 
+    <script type="text/ocaml" stdout="script2" stderr="script2">
+      print_endline "└── ";;
+    </script>
+    <div id="script2"> </div>
+
     <script type="text/javascript" src="eval.js"></script>
 
   </body>
